reemplaza df original slim clean

--- a/futbol.ipynb
+++ b/futbol.ipynb
@@ -4753,7 +4753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": null,
    "id": "ee7199ba",
    "metadata": {},
    "outputs": [
@@ -4786,27 +4786,23 @@
     }
    ],
    "source": [
-    "football_df_slim_cleaned_test = football_df_slim_cleaned.copy()\n",
-    "\n",
     "# Clean the 'Dia_partido' column in the DataFrame\n",
-    "football_df_slim_cleaned_test[\"Dia_partido\"] = football_df_slim_cleaned_test[\n",
-    "    \"Dia_partido\"\n",
-    "].apply(\n",
+    "football_df_slim_cleaned[\"Dia_partido\"] = football_df_slim_cleaned[\"Dia_partido\"].apply(\n",
     "    lambda x: re.sub(r\"(\\s.*\\d{4})\\s.*$\", r\"\\1\", x)  # Remove anything after the year\n",
     ")\n",
     "\n",
     "# Convert the cleaned 'Dia_partido' column to datetime format\n",
-    "football_df_slim_cleaned_test[\"Dia_partido\"] = pd.to_datetime(\n",
-    "    football_df_slim_cleaned_test[\"Dia_partido\"], format=\"%A %B %d, %Y\", errors=\"coerce\"\n",
+    "football_df_slim_cleaned[\"Dia_partido\"] = pd.to_datetime(\n",
+    "    football_df_slim_cleaned[\"Dia_partido\"], format=\"%A %B %d, %Y\", errors=\"coerce\"\n",
     ")\n",
     "\n",
-    "print(football_df_slim_cleaned_test.head(20).to_string())"
+    "print(football_df_slim_cleaned.head(20).to_string())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "232f3a98",
+   "id": "5c07b012",
    "metadata": {},
    "outputs": [],
    "source": []
