cleans market value duplicates

--- a/futbol.ipynb
+++ b/futbol.ipynb
@@ -4753,7 +4753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 294,
    "id": "ee7199ba",
    "metadata": {},
    "outputs": [
@@ -4800,9 +4800,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "607f6e16",
+   "metadata": {},
+   "source": [
+    "Ahora verificamos que no hayan nulos en **Dia_partido**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "id": "09e4682f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of NaT/NaN values in 'Dia_partido': 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the number of NaT/NaN values in 'Dia_partido'\n",
+    "na_count = football_df_slim_cleaned[\"Dia_partido\"].isna().sum()\n",
+    "\n",
+    "# Print the count\n",
+    "print(f\"Number of NaT/NaN values in 'Dia_partido': {na_count}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c07b012",
+   "metadata": {},
+   "source": [
+    "## 2.4 Eliminación de filas duplicadas (Pt 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8c46218",
+   "metadata": {},
+   "source": [
+    "Ahora que estan limpios **Dia-partido** y **market_value** podemos eliminar los duplicados del mismo **Jugador**, **Dia-partido** y distinto **market_value** (tomando el **market_value** mayor del set de duplicados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
+   "id": "9b0e5917",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total de duplicados en Jugador y Dia_partido: 4996\n",
+      "Duplicados exactos ignorando market_value: 1430\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filtrar duplicados por Jugador + Dia_partido\n",
+    "dupes = football_df_slim_cleaned[\n",
+    "    football_df_slim_cleaned.duplicated(subset=[\"Jugador\", \"Dia_partido\"], keep=False)\n",
+    "]\n",
+    "\n",
+    "# Ordenar por jugador y fecha\n",
+    "dupes = dupes.sort_values([\"Jugador\", \"Dia_partido\"]).reset_index(drop=True)\n",
+    "\n",
+    "print(f\"Total de duplicados en Jugador y Dia_partido: {len(dupes)}\")\n",
+    "\n",
+    "# Subset of columns to check (exclude market_value)\n",
+    "cols_to_check = [c for c in football_df_slim_cleaned.columns if c != \"market_value\"]\n",
+    "\n",
+    "# From your subset of dupes (same Jugador+Dia_partido)\n",
+    "exact_dupes_ignoring_mv = dupes[dupes.duplicated(subset=cols_to_check, keep=False)]\n",
+    "\n",
+    "print(\"Duplicados exactos ignorando market_value:\", exact_dupes_ignoring_mv.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47c58194",
+   "metadata": {},
+   "source": [
+    "Aca borramos las filas mencionadas arriba con la siguiente estrategia:\n",
+    "1. **Encuentra duplicados**: Busca filas duplicadas basadas en las columnas `Jugador` y `Dia_partido`.\n",
+    "2. **Selecciona el valor más alto de `market_value`**: Dentro de los duplicados, se identifica la fila con el valor más alto de `market_value` para cada combinación de `(Jugador, Dia_partido)`.\n",
+    "3. **Elimina las filas con `market_value` más bajo**: Se eliminan las filas cuyo `market_value` es más bajo que el máximo para cada grupo.\n",
+    "4. **Verifica duplicados restantes**: Después de la eliminación, se comprueba si aún existen duplicados con el mismo `market_value` para cada combinación `(Jugador, Dia_partido)`.\n",
+    "\n",
+    "Finalmente, imprime cuántas filas fueron eliminadas y si quedan duplicados con el mismo `market_value`.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c07b012",
+   "id": "c1ba79d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remaining duplicates after cleaning:\n",
+      "Series([], dtype: int64)\n",
+      "There are no remaining duplicates with the same market_value after cleaning.\n",
+      "Total rows removed: 2638\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Find rows with duplicates based on 'Jugador' and 'Dia_partido'\n",
+    "dupes = football_df_slim_cleaned[\n",
+    "    football_df_slim_cleaned.duplicated(subset=[\"Jugador\", \"Dia_partido\"], keep=False)\n",
+    "]\n",
+    "\n",
+    "# Step 2: For each (Jugador, Dia_partido) pair, get the row with the highest 'market_value'\n",
+    "dupes_highest = dupes.loc[\n",
+    "    dupes.groupby([\"Jugador\", \"Dia_partido\"])[\"market_value\"].idxmax()\n",
+    "]\n",
+    "\n",
+    "# Step 3: Identify rows to remove (those that don't have the highest 'market_value')\n",
+    "# Filter out rows that don't have the highest market_value\n",
+    "dupes_to_remove = dupes[~dupes.index.isin(dupes_highest.index)]\n",
+    "\n",
+    "# Step 4: Remove rows from the original DataFrame\n",
+    "# Use the index of the rows to remove from the original DataFrame\n",
+    "football_df_slim_cleaned = football_df_slim_cleaned.drop(dupes_to_remove.index)\n",
+    "\n",
+    "# Step 5: Verify if there are still duplicates\n",
+    "duplicate_check = football_df_slim_cleaned_cleaned.groupby(\n",
+    "    [\"Jugador\", \"Dia_partido\", \"market_value\"]\n",
+    ").size()\n",
+    "\n",
+    "# Check for any groups with more than one row (duplicates)\n",
+    "duplicates_in_groups = duplicate_check[duplicate_check > 1]\n",
+    "\n",
+    "# Print out any remaining duplicates\n",
+    "print(f\"Remaining duplicates after cleaning:\\n{duplicates_in_groups}\")\n",
+    "\n",
+    "# If no duplicates remain, the output should be empty\n",
+    "if duplicates_in_groups.empty:\n",
+    "    print(\n",
+    "        \"There are no remaining duplicates with the same market_value after cleaning.\"\n",
+    "    )\n",
+    "else:\n",
+    "    print(\n",
+    "        f\"There are still duplicates with the same market_value: {len(duplicates_in_groups)}\"\n",
+    "    )\n",
+    "\n",
+    "# Print the number of rows removed\n",
+    "print(f\"Total rows removed: {len(dupes_to_remove)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bc51bef",
+   "metadata": {},
+   "source": [
+    "Verificamos que ya no hayan duplicados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 348,
+   "id": "bc4d11a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total de duplicados en Jugador y Dia_partido: 0\n",
+      "Duplicados exactos ignorando market_value: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filtrar duplicados por Jugador + Dia_partido\n",
+    "dupes = football_df_slim_cleaned_cleaned[football_df_slim_cleaned_cleaned.duplicated(subset=[\"Jugador\", \"Dia_partido\"], keep=False)]\n",
+    "dupes = dupes.sort_values([\"Jugador\", \"Dia_partido\"]).reset_index(drop=True)\n",
+    "print(f\"Total de duplicados en Jugador y Dia_partido: {len(dupes)}\")\n",
+    "cols_to_check = [\n",
+    "    c for c in football_df_slim_cleaned_cleaned.columns if c != \"market_value\"\n",
+    "]\n",
+    "exact_dupes_ignoring_mv = dupes[dupes.duplicated(subset=cols_to_check, keep=False)]\n",
+    "\n",
+    "print(\"Duplicados exactos ignorando market_value:\", exact_dupes_ignoring_mv.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1537089",
    "metadata": {},
    "outputs": [],
    "source": []
