adds days left on contract

--- a/futbol.ipynb
+++ b/futbol.ipynb
@@ -5264,6 +5264,76 @@
     "# Verificar el resultado\n",
     "print(football_df_slim_cleaned[\"contract_date\"].head(10))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df4f4eb4",
+   "metadata": {},
+   "source": [
+    "Ahora vamos a construir una columna que indica el # de dias restantes en el contracto de cada jugador a la fecha:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "2d7b8c78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jugador                  Þorir Johann Helgason\n",
+      "contract_date              2035-06-30 00:00:00\n",
+      "days_left_on_contract                     3591\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "today = pd.Timestamp.today().normalize()\n",
+    "\n",
+    "football_df_slim_cleaned[\"days_left_on_contract\"] = (\n",
+    "    football_df_slim_cleaned[\"contract_date\"] - today\n",
+    ").dt.days\n",
+    "\n",
+    "print(\n",
+    "    football_df_slim_cleaned[\n",
+    "        [\"Jugador\", \"contract_date\", \"days_left_on_contract\"]\n",
+    "    ].max()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "a3730e45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Jugador Nacionalidad Posicion    Edad Dia_partido  Goles  Tiros Totales   xG  npxG  xAG  Acciones_que_crean_tiros  Pases_intentados  Pases_progresivos  Regates_exitosos  Pases_medios_completados  Pases_largos_completados   xA  Pases_en_ultimo_tercio  Pases_balon_vivo  Pases_balon_muerto  Pases_al_hueco  Pases_centros  Pases_completados  Pases_fuera_de_juego  Valla_no_vencida  Errores_defnsivos_ocasion_tiro  Toques_en_zona_ofensiva  Toques_en_area_rival  %_de_regates_exitosos  Veces_que_fue_barrido_regate  Acarreos_ultimo_tercio  Malos_controles  Perdida_balon  Pases_recibidos  Pases_progresivos_recibidos  Faltas_cometidas  Centros  Duelos_aereos_ganados  %_de_duelos_aereos_ganados market_value contract_date  days_left_on_contract\n",
+      "33950  Edoardo Goldaniga       it ITA       CB  31-126  2025-03-08      0              1  0.8   0.8  0.0                         1                43                  2                 0                        23                         1  0.0                       2                40                   3               0              0                 39                     0                 2                               0                        5                     3                    NaN                             0                       1                0              0               37                            0                 1        0                      1                        33.3          3.0    2028-06-30                   1035\n",
+      "34648     Antonino Gallo       it ITA       LB  25-083  2025-03-29      0              1  0.1   0.1  0.0                         1                35                  5                 0                        15                         1  0.1                       4                30                   5               0              2                 24                     0                 9                               0                        8                     1                    NaN                             0                       0                1              0               26                            3                 0        2                      1                        25.0          4.3    2026-06-30                    304\n",
+      "22167     Walid Cheddira       ma MAR       FW  27-080  2025-04-12      0              0  0.0   0.0  0.0                         0                 0                  0                 0                         0                         0  0.0                       0                 0                   0               0              0                  0                     0                 0                               0                        0                     0                    NaN                             0                       0                0              0                0                            0                 1        0                      0                         0.0          2.5    2028-06-30                   1035\n",
+      "8664    Mateus Fernandes       pt POR    AM,RW  20-241  2025-03-08      0              1  0.0   0.0  0.0                         0                28                  0                 1                         7                         2  0.0                       3                25                   3               0              0                 22                     0                 1                               0                        5                     1                  100.0                             0                       0                2              2               23                            0                 2        0                      0                         NaN          1.0    2028-06-30                   1035\n",
+      "16968     Diego Llorente       es ESP       CB  31-107  2024-12-01      0              1  0.0   0.0  0.0                         1                71                  7                 0                        35                        10  0.0                       4                66                   5               0              0                 66                     0                 3                               0                        4                     0                    NaN                             0                       1                1              0               53                            0                 0        0                      2                        40.0          6.0    2028-06-30                   1035\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(football_df_slim_cleaned.sample(5).to_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd9286f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
