Adds clean datasets

--- a/futbol.ipynb
+++ b/futbol.ipynb
@@ -7930,6 +7930,217 @@
    "id": "ef6d7a9a",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "id": "50bfd710",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top correlations with log target:\n",
+      " matches_played                 0.463609\n",
+      "Acciones_que_crean_tiros       0.461649\n",
+      "Toques_en_area_rival           0.446143\n",
+      "Toques_en_zona_ofensiva        0.442080\n",
+      "Tiros Totales                  0.431804\n",
+      "Pases_recibidos                0.431036\n",
+      "Acarreos_ultimo_tercio         0.416676\n",
+      "days_left_on_contract          0.415502\n",
+      "xAG                            0.414604\n",
+      "Pases_progresivos              0.404537\n",
+      "xA                             0.382303\n",
+      "npxG                           0.376636\n",
+      "Regates_exitosos               0.373853\n",
+      "Goles                          0.368148\n",
+      "xG                             0.367303\n",
+      "Pases_al_hueco                 0.356616\n",
+      "Pases_balon_vivo               0.351781\n",
+      "Pases_progresivos_recibidos    0.345320\n",
+      "Perdida_balon                  0.330288\n",
+      "Pases_completados              0.328535\n",
+      "Name: target_log, dtype: float64\n",
+      "\n",
+      "Candidates (|r| >= 0.15): 28\n",
+      " ['matches_played', 'Acciones_que_crean_tiros', 'Toques_en_area_rival', 'Toques_en_zona_ofensiva', 'Tiros Totales', 'Pases_recibidos', 'Acarreos_ultimo_tercio', 'days_left_on_contract', 'xAG', 'Pases_progresivos', 'xA', 'npxG', 'Regates_exitosos', 'Goles', 'xG', 'Pases_al_hueco', 'Pases_balon_vivo', 'Pases_progresivos_recibidos', 'Perdida_balon', 'Pases_completados', 'Pases_en_ultimo_tercio', 'Veces_que_fue_barrido_regate', 'Pases_intentados', 'Malos_controles', 'Pases_medios_completados', 'Pases_fuera_de_juego', 'Edad', 'Faltas_cometidas']\n",
+      "\n",
+      "Selected after collinearity prune (|pairwise r| < 0.85): 18\n",
+      " ['matches_played', 'Acciones_que_crean_tiros', 'Toques_en_area_rival', 'Pases_recibidos', 'Acarreos_ultimo_tercio', 'days_left_on_contract', 'xAG', 'Pases_progresivos', 'npxG', 'Regates_exitosos', 'Pases_al_hueco', 'Pases_progresivos_recibidos', 'Perdida_balon', 'Veces_que_fue_barrido_regate', 'Malos_controles', 'Pases_fuera_de_juego', 'Edad', 'Faltas_cometidas']\n",
+      "\n",
+      "Final feature list (add Edad for Edad_c & Edad_c2 later):\n",
+      " ['Edad', 'matches_played', 'Acciones_que_crean_tiros', 'Toques_en_area_rival', 'Pases_recibidos', 'Acarreos_ultimo_tercio', 'days_left_on_contract', 'xAG', 'Pases_progresivos', 'npxG', 'Regates_exitosos', 'Pases_al_hueco', 'Pases_progresivos_recibidos', 'Perdida_balon', 'Veces_que_fue_barrido_regate', 'Malos_controles', 'Pases_fuera_de_juego', 'Faltas_cometidas']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = players_simple.copy()\n",
+    "df[\"market_value_num\"] = pd.to_numeric(df[\"market_value\"], errors=\"coerce\")\n",
+    "\n",
+    "# ----- STEP 0: build the correlation table vs LOG target\n",
+    "num = df.select_dtypes(include=[np.number]).copy()\n",
+    "num[\"target_log\"] = np.log1p(num[\"market_value_num\"])\n",
+    "\n",
+    "corr = num.corr(numeric_only=True)\n",
+    "corr_to_target = (\n",
+    "    corr[\"target_log\"]\n",
+    "    .drop(labels=[\"market_value_num\", \"target_log\"])\n",
+    "    .sort_values(key=np.abs, ascending=False)\n",
+    ")\n",
+    "\n",
+    "print(\"Top correlations with log target:\\n\", corr_to_target.head(20))\n",
+    "\n",
+    "# ----- STEP 1: keep only features with |r| >= threshold (tweak threshold)\n",
+    "thr = 0.15  # start here; raise to be stricter or lower to be more inclusive\n",
+    "candidates = corr_to_target[corr_to_target.abs() >= thr].index.tolist()\n",
+    "print(f\"\\nCandidates (|r| >= {thr}): {len(candidates)}\\n\", candidates)\n",
+    "\n",
+    "\n",
+    "# ----- STEP 2: prune highly collinear features among themselves (greedy)\n",
+    "def greedy_prune(corr_matrix, ordered_features, max_r=0.85):\n",
+    "    selected = []\n",
+    "    for f in ordered_features:  # already ordered by |r with target|\n",
+    "        if all(abs(corr_matrix.loc[f, s]) < max_r for s in selected):\n",
+    "            selected.append(f)\n",
+    "    return selected\n",
+    "\n",
+    "\n",
+    "corr_sub = num[candidates + [\"target_log\"]].corr().abs()\n",
+    "selected = greedy_prune(corr_sub, candidates, max_r=0.85)\n",
+    "print(\n",
+    "    f\"\\nSelected after collinearity prune (|pairwise r| < 0.85): {len(selected)}\\n\",\n",
+    "    selected,\n",
+    ")\n",
+    "\n",
+    "# ----- OPTIONAL: always keep age (we’ll curve it later), even if r is small\n",
+    "force_keep = [\"Edad\"]\n",
+    "selected_final = list(dict.fromkeys(force_keep + selected))\n",
+    "print(\"\\nFinal feature list (add Edad for Edad_c & Edad_c2 later):\\n\", selected_final)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34072c41",
+   "metadata": {},
+   "source": [
+    "## 2.9 Construcción de dataset limpio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 442,
+   "id": "af6e2d55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz de modelado: (1502, 29)\n",
+      "NAs por columna (deberían ser 0):\n",
+      "matches_played              0\n",
+      "Acciones_que_crean_tiros    0\n",
+      "Toques_en_area_rival        0\n",
+      "Pases_recibidos             0\n",
+      "Acarreos_ultimo_tercio      0\n",
+      "dtype: int64\n",
+      "\n",
+      "Guardado:\n",
+      "- players_model_matrix.csv  (para entrenar)\n",
+      "- players_clean_full.csv   (completo, exploración)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Punto de partida\n",
+    "df = players_simple.copy()  # <- ya es 1 fila por jugador\n",
+    "df[\"market_value_num\"] = pd.to_numeric(df[\"market_value\"], errors=\"coerce\")\n",
+    "df[\"target_log\"] = np.log1p(df[\"market_value_num\"])\n",
+    "\n",
+    "# --- 1) Features de edad (centrado + cuadrado) ---\n",
+    "age = df[\"Edad\"].astype(float)\n",
+    "age_filled = age.fillna(age.median())  # 2 faltantes según tu chequeo\n",
+    "mu_age = age_filled.mean()\n",
+    "df[\"Edad_c\"] = age_filled - mu_age\n",
+    "df[\"Edad_c2\"] = df[\"Edad_c\"] ** 2\n",
+    "\n",
+    "# --- 2) Verifica que 'selected_final' exista y esté en las columnas ---\n",
+    "try:\n",
+    "    selected_final\n",
+    "except NameError:\n",
+    "    raise RuntimeError(\n",
+    "        \"No encuentro 'selected_final'. Ejecuta antes la celda del selector por correlación.\"\n",
+    "    )\n",
+    "\n",
+    "missing = [c for c in selected_final if c not in df.columns]\n",
+    "if missing:\n",
+    "    raise RuntimeError(\n",
+    "        f\"Estas columnas de 'selected_final' no están en players_simple: {missing}\"\n",
+    "    )\n",
+    "\n",
+    "# Si 'Edad' estaba en selected_final, la sustituimos por Edad_c y Edad_c2\n",
+    "base_feats = [c for c in selected_final if c != \"Edad\"]\n",
+    "\n",
+    "# --- 3) (Opcional) Añadir posiciones; pon False si no quieres usarlas ---\n",
+    "USE_POS = True\n",
+    "pos_feats = [\"GK\", \"CB\", \"WB\", \"LW\", \"RW\", \"FW\"] if USE_POS else []\n",
+    "\n",
+    "# --- 4) Armar matriz de modelado (X + y) ---\n",
+    "model_cols = base_feats + [\"Edad_c\", \"Edad_c2\"] + pos_feats\n",
+    "keep_cols = model_cols + [\"market_value_num\", \"target_log\"]\n",
+    "\n",
+    "model_df = df[keep_cols].copy()\n",
+    "\n",
+    "# Elimina filas con NA en X o y\n",
+    "model_df = model_df.dropna(subset=model_cols + [\"market_value_num\"]).copy()\n",
+    "\n",
+    "# Anexa identificadores y algunos metadatos útiles\n",
+    "model_df = (\n",
+    "    model_df.join(df[[\"Nacionalidad\"]], how=\"left\")\n",
+    "    .reset_index()  # Jugador pasa a columna\n",
+    "    .rename(columns={\"index\": \"Jugador\"})\n",
+    ")\n",
+    "\n",
+    "print(\"Matriz de modelado:\", model_df.shape)\n",
+    "print(\"NAs por columna (deberían ser 0):\")\n",
+    "print(\n",
+    "    model_df[model_cols + [\"market_value_num\"]]\n",
+    "    .isna()\n",
+    "    .sum()\n",
+    "    .sort_values(ascending=False)\n",
+    "    .head()\n",
+    ")\n",
+    "\n",
+    "# --- 5) Dataset completo “limpio” (para referencia) ---\n",
+    "full_df = df.copy().reset_index().rename(columns={\"index\": \"Jugador\"})\n",
+    "\n",
+    "# --- 6) Exportar a CSV ---\n",
+    "model_path = \"players_model_matrix.csv\"\n",
+    "full_path = \"players_clean_full.csv\"\n",
+    "\n",
+    "model_df.to_csv(model_path, index=False, encoding=\"utf-8\")\n",
+    "full_df.to_csv(full_path, index=False, encoding=\"utf-8\")\n",
+    "\n",
+    "print(\n",
+    "    f\"\\nGuardado:\\n- {model_path}  (para entrenar)\\n- {full_path}   (completo, exploración)\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db44505e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
