--- a/futbol.ipynb
+++ b/futbol.ipynb
@@ -9013,8 +9013,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11f69a3c",
+   "metadata": {},
+   "source": [
+    "## 3.3 Cálculo de métricas de calidad del modelo\n",
+    "\n",
+    "Una vez entrenado el pipeline y realizadas las predicciones, se procede a la evaluación cuantitativa del modelo. El primer paso consiste en revertir tanto los valores predichos como los valores reales del conjunto de prueba desde su escala logarítmica a su escala original en euros. Esta transformación, realizada con la función `np.expm1`.\n",
+    "\n",
+    "Con los valores ya en euros, se calculan varias métricas de rendimiento. El **R-cuadrado (R²)** se utiliza para medir la proporción de la varianza en el valor de mercado que es explicada por el modelo. Para cuantificar el error, se calculan el **Error Absoluto Medio (MAE)**, que representa la magnitud promedio del error en millones de euros, y la **Raíz del Error Cuadrático Medio (RMSE)**, que también mide el error pero penaliza en mayor medida las desviaciones grandes. Adicionalmente, se calcula un **Error Porcentual (MAPE)** para contextualizar la magnitud del error en relación con el valor promedio de los jugadores."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 234,
    "id": "f150c7bb",
    "metadata": {},
    "outputs": [
@@ -9026,7 +9038,7 @@
       "--- Resultados de la Evaluación (en millones de Euros) ---\n",
       "R²: 0.5463\n",
       "MAE (Error Absoluto): 8.38 millones de €\n",
-      "MAPE (Error Porcentual): 50.50 millones de €\n",
+      "MAPE (Error Porcentual): 50.50 %\n",
       "RMSE (Raíz del Error Cuadrático Medio): 16.02 millones de €\n"
      ]
     }
@@ -9050,6 +9062,16 @@
     "print(f\"MAE (Error Absoluto): {mae:.2f} millones de €\")\n",
     "print(f\"MAPE (Error Porcentual): {mape:.2f} %\")\n",
     "print(f\"RMSE (Raíz del Error Cuadrático Medio): {rmse:.2f} millones de €\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbe08af6",
+   "metadata": {},
+   "source": [
+    "## 3.4 Pipeline exportado en formato .joblib\n",
+    "\n",
+    "Se exporta el pipeline creado al formato solicitado y además se hace una prueba del correcto funcionamiento de este haciendo la predicción para el primer jugador de los datos de prueba."
    ]
   },
   {
