--- a/futbol.ipynb
+++ b/futbol.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "#### Integrantes\n",
     "\n",
-    "Juan Esteban -\n",
+    "Juan Esteban Quiroga - 202013216 (j.quirogar@uniandes.edu.co)\n",
     "\n",
     "Andres Ortiz - 201727662 (a.ortizg@uniandes.edu.co)\n",
     "\n",
