--- a/notebook_futbol.ipynb
+++ b/notebook_futbol.ipynb
@@ -10,6 +10,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1db764e0",
+   "metadata": {},
+   "source": [
+    "#### Integrantes\n",
+    "\n",
+    "Juan Esteban Quiroga - 202013216 (j.quirogar@uniandes.edu.co)\n",
+    "\n",
+    "Andres Ortiz - 201727662 (a.ortizg@uniandes.edu.co)\n",
+    "\n",
+    "Carlos Diaz - 202210262 (c.diazv@uniandes.edu.co)\n",
+    "\n",
+    "-----\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "66f5079b",
    "metadata": {},
    "source": [
